--- a/Website/effects.css
+++ b/Website/effects.css
@@ -1,5 +1,21 @@
 h1{
-    color: teal ;
-    font-family: 'Courier New', Courier, monospace;
-    font-style: normal;
+    color:crimson;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-style : normal;
+    text-align:centre;
+    background-color: yellow;
+    
+
+
+}
+
+p{
+    color : blue;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: justify;
+    
+}
+
+body{
+    background-color: darkgrey;
 }
